# ChangeLog for net-misc/ofono
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ofono/ChangeLog,v 1.14 2010/05/20 13:06:43 dagger Exp $

*ofono-0.20-r1 (20 May 2010)

  20 May 2010; Robert Piasek <dagger@gentoo.org> -ofono-0.20.ebuild,
  +ofono-0.20-r1.ebuild:
  Cleanup examples and added some extra USE flags. Fixes bug #318667

*ofono-0.20 (29 Mar 2010)

  29 Mar 2010; Robert Piasek <dagger@gentoo.org> -ofono-0.17.ebuild,
  ofono-0.18.ebuild, +ofono-0.20.ebuild:
  Version bump.

*ofono-0.18 (15 Feb 2010)

  15 Feb 2010; Robert Piasek <dagger@gentoo.org> -ofono-0.11.ebuild,
  -ofono-0.13.ebuild, +ofono-0.18.ebuild:
  New version of oFono supports HFP

*ofono-0.17 (01 Feb 2010)

  01 Feb 2010; Robert Piasek <dagger@gentoo.org> -ofono-0.10.ebuild,
  +ofono-0.17.ebuild:
  Version bump of oFono

*ofono-0.13 (07 Dec 2009)

  07 Dec 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.9.ebuild,
  +ofono-0.13.ebuild:
  New version of oFono. Bupmed deps on udev

*ofono-0.11 (24 Nov 2009)

  24 Nov 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.8.ebuild,
  +ofono-0.11.ebuild:
  version bump of oFono

*ofono-0.10 (16 Nov 2009)

  16 Nov 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.7.ebuild,
  +ofono-0.10.ebuild:
  New version adds initial support for Palm Pre

*ofono-0.9 (03 Nov 2009)

  03 Nov 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.6.ebuild,
  +ofono-0.9.ebuild:
  Version bump

*ofono-0.8 (19 Oct 2009)

  19 Oct 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.5.ebuild,
  +ofono-0.8.ebuild:
  Version bump

*ofono-0.7 (05 Oct 2009)

  05 Oct 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.4.ebuild,
  +ofono-0.7.ebuild:
  Version bump

*ofono-0.6 (29 Sep 2009)

  29 Sep 2009; Robert Piasek <dagger@gentoo.org> +ofono-0.6.ebuild:
  Version bump. Fixes some problems on calypso modems

*ofono-0.5 (25 Sep 2009)

  25 Sep 2009; Robert Piasek <dagger@gentoo.org> -ofono-0.3.ebuild,
  +ofono-0.5.ebuild: