@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/ofono
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ofono/ChangeLog,v 1.14 2010/05/20 13:06:43 dagger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ofono/ChangeLog,v 1.15 2010/05/28 10:32:56 dagger Exp $
+
+*ofono-0.21 (28 May 2010)
+
+  28 May 2010; Robert Piasek <dagger@gentoo.org> -ofono-0.18.ebuild,
+  +ofono-0.21.ebuild:
+  Version bump.
 
 *ofono-0.20-r1 (20 May 2010)
 
